* fixed problem with index page not showing footer properly * made footer show on right. * fixed problem with reports pages not working because of incorrect require statements * Made places remaining report refresh after 5 seconds * fixed problem with some reports not showing the correct data. this was due to the sql querys being wrong

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -733,3 +733,6 @@ table.average_results tr td {
 	display: none;
 }
 
+.footer {
+	float: right;
+}
